kp mm and syntax changes to support new require/source modifiers kploader : now use a real logger instead of System.out
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@16704 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: dce75a677c89703aac3d1fa7cbaec0a84b9b97f5